--- a/style.css
+++ b/style.css
@@ -27,3 +27,15 @@ h1{
     justify-content: center;
      border-bottom:1px solid #f1f1f1;
 }
+.bloc-logo-info{
+  grid-area:2 / 1 / 3 / -1 ;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bloc-logo{
+    width:50%;
+}
+.bloc-logo img{
+    width: 100%;
+}
