--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: #f1f1f1;
     background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
-    height: 1000VH;
+    height: 100VH;
 
 }
 .container{
@@ -18,7 +18,7 @@ body{
     grid-template: 100px,300px,100px,100px /repeat(8,100px);
     margin: 100px auto 0;
     position: relative;
-    border: #f1f1f1;
+    border: 1px solid #f1f1f1;
 }
 h1{
     grid-area: 1 / 1 / 2 / -1;
@@ -28,7 +28,7 @@ h1{
      border-bottom:1px solid #f1f1f1;
 }
 .bloc-logo-info{
-  grid-area:2 / 1 / 3 / -1 ;  
+  grid-area: 2 / 1 / 3 / -1 ;  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,5 +37,46 @@ h1{
     width:50%;
 }
 .bloc-logo img{
-    width: 100%;
+    width: 79%;
+    height: auto;
+}
+.bloc-info{
+    width: 50%;
+}
+.bloc-info .temps{
+    font-size: 40px;
+}
+.bloc-info .temps ::first-letter{
+    text-transform: capitalize;
+}
+.bloc-info .temperature{
+    font: size 60px;
+}
+.bloc.info.localisation{
+    font-size:40%;
+    word-wrap: break-word;
+}
+.heur-bloc-prevision{
+    grid-area: 3 / 1 / 4 / -1;
+}
+.jour-prevision-bloc{
+    grid-area: 4 / 1 / 5 / -1;
+}
+.jour-prevision-bloc , .heur-bloc-prevision{ 
+    display: grid;
+    grid-template: 100px / repeat(7, 1fr);
+}
+.bloc-h ,.bloc-j{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-top: 1px solid #f1f1f1;
+    font-size: 21px;
+}
+.bloc-h:not(:last-child) ,.bloc-j:not(:last-child){
+    border-right: 1px solid #f1f1f1;
+}
+.bloc-h p, .bloc-j p{
+    margin: 5px;
 }
