--- a/style.css
+++ b/style.css
@@ -77,6 +77,18 @@ h1{
 .bloc-h:not(:last-child) ,.bloc-j:not(:last-child){
     border-right: 1px solid #f1f1f1;
 }
-.bloc-h p, .bloc-j p{
-    margin: 5px;
+.bloc-h p, .bloc-j p {
+    margin: 3px;
+}
+.overlay-icone-chargement{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
+    transition:opacity 1.1s ease-out;
+    z-index: 1000;
+}
+.overlay-icone-chargement img{
+    width: 150px;
+    
 }
