recuperation de la localisation et du degret via l api

--- a/style.css
+++ b/style.css
@@ -90,5 +90,11 @@ h1{
 }
 .overlay-icone-chargement img{
     width: 150px;
-    
+    position: absolute;
+    top: 50%;
+    left:50%;
+ transform: translate(-50% , -50%);
+}
+.disparution{
+    opacity: 0;
 }
